# Tullius_ctd_loger

./: .clang-tidy  .gitignore  .vibekit.auto  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.vibe/: README.md  config.json
dump_tool/: AGENTS.md  CMakeLists.txt
dump_tool/data/: crash_signatures.json  graphics_injection_rules.json  hook_frameworks.json  plugin_rules.json  troubleshooting_guides.json
dump_tool/data/address_db/: skyrimse_functions.json
dump_tool/resources/: SkyrimDiagDumpTool.manifest  SkyrimDiagDumpTool.rc
dump_tool/src/: AddressResolver.cpp  AddressResolver.h  Analyzer.CaptureInputs.cpp  Analyzer.History.cpp  Analyzer.cpp  Analyzer.h  AnalyzerInternals.cpp  AnalyzerInternals.h  AnalyzerInternalsBlackbox.cpp  AnalyzerInternalsCrashBucket.cpp  AnalyzerInternalsFirstChance.cpp  AnalyzerInternalsStackScan.cpp  AnalyzerInternalsStackwalk.cpp  AnalyzerInternalsStackwalkFormat.cpp  AnalyzerInternalsStackwalkMemory.cpp  AnalyzerInternalsStackwalkPriv.h  AnalyzerInternalsStackwalkScoring.cpp  AnalyzerInternalsStackwalkSymbols.cpp  AnalyzerInternalsWct.cpp  AnalyzerPipeline.h  Bucket.h  CandidateConsensus.cpp  CandidateConsensus.h  CrashHistory.cpp  CrashHistory.h  CrashLogger.cpp  CrashLogger.h  CrashLoggerParseCore.cpp  CrashLoggerParseCore.h  DumpToolCliArgs.h  DumpToolCliMain.cpp  DumpToolConfig.cpp  DumpToolConfig.h  DumpToolStartupUtil.h  EvidenceBuilder.cpp  EvidenceBuilder.h  EvidenceBuilderCandidates.cpp  EvidenceBuilderEvidence.Context.cpp  EvidenceBuilderEvidence.Crash.cpp  EvidenceBuilderEvidence.Freeze.cpp  (+45 more)
fuzz/: CMakeLists.txt  fuzz_crashlogger_parser.cpp  fuzz_wct_parser.cpp
fuzz/corpus/crashlogger/: basic.txt
fuzz/corpus/wct/: basic.json
helper/: AGENTS.md  CMakeLists.txt
helper/include/SkyrimDiagHelper/: Config.h  CrashHeuristics.h  CrashRecapturePolicy.h  DumpProfile.h  DumpToolResolve.h  DumpWriter.h  HangDetect.h  HangSuppression.h  HeadlessAnalysisPolicy.h  LoadStats.h  PluginScanner.h  ProcessAttach.h  Retention.h  WctCapture.h
helper/src/: CaptureCommon.h  CompatibilityPreflight.cpp  CompatibilityPreflight.h  Config.cpp  CrashCapture.cpp  CrashCapture.h  CrashEtwCapture.cpp  CrashEtwCapture.h  DumpProfile.cpp  DumpToolLaunch.cpp  DumpToolLaunch.h  DumpWriter.cpp  EtwCapture.cpp  EtwCapture.h  HangCapture.Execute.cpp  HangCapture.Guards.cpp  HangCapture.cpp  HangCapture.h  HangCaptureInternal.h  HangDetect.cpp  HelperCommon.cpp  HelperCommon.h  HelperLog.cpp  HelperLog.h  HelperMain.Loop.cpp  HelperMain.Process.cpp  HelperMain.Startup.cpp  HelperMainInternal.h  HexFormat.h  IncidentManifest.cpp  IncidentManifest.h  LoadStats.cpp  ManualCapture.cpp  ManualCapture.h  PendingCrashAnalysis.Decision.cpp  PendingCrashAnalysis.Execute.cpp  PendingCrashAnalysis.cpp  PendingCrashAnalysis.h  PendingCrashAnalysisInternal.h  PluginScanner.cpp  (+12 more)
plugin/: AGENTS.md  CMakeLists.txt
plugin/include/SkyrimDiag/: Blackbox.h  CrashHandler.h  EventSinks.h  Hash.h  Heartbeat.h  ResourceLog.h  SharedMemory.h
plugin/src/: Blackbox.cpp  CrashHandler.cpp  EventSinks.cpp  Heartbeat.cpp  MsvcRegexStub.cpp  PluginInfo.cpp  PluginMain.cpp  ResourceHooks.cpp  ResourceLog.cpp  SharedMemory.cpp
tests/: AGENTS.md  CMakeLists.txt  HelperRuntimeTestUtils.h  SourceGuardTestUtils.h  address_resolver_tests.cpp  analysis_engine_runtime_tests.cpp  analysis_summary_helpers_tests.cpp  blackbox_loader_stall_tests.cpp  bucket_quality_script_tests.py  bucket_tests.cpp  candidate_consensus_tests.cpp  crash_capture_false_positive_guard_tests.cpp  crash_capture_filter_logic_tests.cpp  crash_capture_refactored_guard_tests.cpp  crash_history_tests.cpp  crash_hook_mode_guard_tests.cpp  crash_recapture_policy_tests.cpp  crashlogger_parser_tests.cpp  diagnostic_logging_guard_tests.cpp  dump_profile_tests.cpp  dump_tool_cli_args_tests.cpp  dump_tool_headless_resolver_tests.cpp  dump_writer_guard_tests.cpp  event_detail_guard_tests.cpp  freeze_candidate_consensus_tests.cpp  graphics_injection_diag_tests.cpp  graphics_injection_integration_tests.cpp  graphics_injection_rules_tests.cpp  hang_suppression_tests.cpp  headless_analysis_policy_tests.cpp  helper_crash_autopen_config_tests.cpp  helper_false_positive_runtime_tests.cpp  helper_hang_runtime_tests.cpp  helper_preflight_guard_tests.cpp  helper_runtime_smoke_tests.cpp  hook_framework_guard_tests.cpp  hook_framework_json_tests.cpp  i18n_core_tests.cpp  incident_manifest_schema_tests.cpp  json_schema_validation_guard_tests.cpp  (+25 more)
tests/data/: golden_summary_v2.json
tests/data/crashlogger_frame_cases/: cpp_exception_module_support.log.txt  direct_fault_dll.log.txt  exe_victim_first_probable_dll.log.txt  frame_object_ref_conflict.log.txt  hook_framework_victim_first_probable_dll.log.txt  system_dll_pathqualified_first_probable_dll.log.txt
tests/data/share_text_cases/: conflicting_community_share.expected.txt  conflicting_summary.json  conflicting_summary_clipboard.expected.txt  frame_first_community_share.expected.txt  frame_first_summary.json  frame_first_summary_clipboard.expected.txt  frame_firstchance_related_community_share.expected.txt  frame_firstchance_related_summary.json  frame_firstchance_related_summary_clipboard.expected.txt  frame_history_related_community_share.expected.txt  frame_history_related_summary.json  frame_history_related_summary_clipboard.expected.txt  frame_resource_related_community_share.expected.txt  frame_resource_related_summary.json  frame_resource_related_summary_clipboard.expected.txt  reference_clue_community_share.expected.txt  reference_clue_summary.json  reference_clue_summary_clipboard.expected.txt  standalone_stackwalk_related_community_share.expected.txt  standalone_stackwalk_related_summary.json  standalone_stackwalk_related_summary_clipboard.expected.txt  strong_frame_related_community_share.expected.txt  strong_frame_related_summary.json  strong_frame_related_summary_clipboard.expected.txt
tests/share_text_fixture_harness/: Program.cs  ShareTextFixtureHarness.csproj
(+149 files in other folders)
